--- a/src/components/assets/css/Portfolio.css
+++ b/src/components/assets/css/Portfolio.css
@@ -9,12 +9,6 @@
   opacity: 1;
 }
 
-.github-link {
-  color: #fff;
-  font-size: 24px;
-  margin-top: 10px;
-}
-
-.github-link:hover {
-  color: #009dff;
+.card:hover{
+  cursor: pointer;
 }
